chore: applied suggestions pt. 2

--- a/docs/src/content/docs/es/guides/css-and-tailwind.mdx
+++ b/docs/src/content/docs/es/guides/css-and-tailwind.mdx
@@ -250,24 +250,24 @@ import ThemeDesigner from '../../../../components/theme-designer.astro';
 <ThemeDesigner
 	labels={{
 		presets: {
-			label: 'Presets',
-			ocean: 'Ocean',
-			forest: 'Forest',
-			oxide: 'Oxide',
-			nebula: 'Nebula',
-			default: 'Default',
-			random: 'Random',
+			label: 'Preajustes',
+			ocean: 'Océano',
+			forest: 'Bosque',
+			oxide: 'Óxido',
+			nebula: 'Nebulosa',
+			default: 'Por defecto',
+			random: 'Aleatorio',
 		},
 		editor: {
-			accentColor: 'Accent',
-			grayColor: 'Gray',
-			hue: 'Hue',
-			chroma: 'Chroma',
-			pickColor: 'Pick color',
+			accentColor: 'Acento',
+			grayColor: 'Gris',
+			hue: 'Tono',
+			chroma: 'Croma',
+			pickColor: 'Elegir color',
 		},
 		preview: {
-			darkMode: 'Dark mode',
-			lightMode: 'Light mode',
+			darkMode: 'Modo oscuro',
+			lightMode: 'Modo claro',
 			bodyText:
 				'El texto del cuerpo se muestra en un tono gris con un alto contraste con el fondo.',
 			linkText: 'Los enlaces están coloreados.',
