--- a/docs/src/content/docs/pt-br/manual-setup.mdx
+++ b/docs/src/content/docs/pt-br/manual-setup.mdx
@@ -36,7 +36,7 @@ Starlight é uma [integração Astro](https://docs.astro.build/pt-br/guides/inte
 
 </Tabs>
 
-Ele vai instalar as as dependências necessárias e adicionar o Starlight no array `integrations` do seu arquivo de configuração do Astro.
+Ele vai instalar as dependências necessárias e adicionar o Starlight no array `integrations` do seu arquivo de configuração do Astro.
 
 ### Configure a integração
 
