chore: applied suggestions pt.2

--- a/docs/src/content/docs/fr/guides/components.mdx
+++ b/docs/src/content/docs/fr/guides/components.mdx
@@ -76,7 +76,7 @@ Le code ci-dessus génère les onglets suivants sur la page :
 	<TabItem label="Moons">Io, Europa, Ganymede</TabItem>
 </Tabs>
 
-### Cards
+### Cartes
 
 import { Card, CardGrid } from '@astrojs/starlight/components';
 
@@ -129,7 +129,7 @@ Ajoutez l'attribut `stagger` pour décaler verticalement la deuxième colonne de
 
 :::
 
-### Cartes (LinkCard)
+### Cartes de Liaison
 
 Utilisez le composant `<LinkCard>` pour créer un lien bien visible vers différentes pages.
 
