--- a/docs/src/content/docs/guides/components.mdx
+++ b/docs/src/content/docs/guides/components.mdx
@@ -167,7 +167,7 @@ import { LinkCard } from '@astrojs/starlight/components';
 
 import { GeneratedIndex } from '@astrojs/starlight/components';
 
-Use the `GeneratedIndex` component to build an list `LinkCards` for the pages in a specified directory. This respects the properties specified in the `sidebar` frontmatter of the pages in that directory such as `label`, `order`, and `hidden`.
+Use the `GeneratedIndex` component to build an list `LinkCard` for the pages in a specified directory. This respects the properties specified in the `sidebar` frontmatter of the pages in that directory such as `label`, `order`, and `hidden`.
 
 <GeneratedIndex directory="guides" />
 
