--- a/docs/src/content/docs/guides/i18n.mdx
+++ b/docs/src/content/docs/guides/i18n.mdx
@@ -37,6 +37,11 @@ Starlight provides built-in support for multilingual sites, including routing, f
    					label: 'العربية',
    					dir: 'rtl',
    				},
+   				// Korean docs in `src/content/docs/ko/`
+   				ko: {
+   					label: '한국어',
+   					lang: 'ko-KR',
+   				},
    			},
    		}),
    	],
@@ -56,6 +61,7 @@ Starlight provides built-in support for multilingual sites, including routing, f
          - ar/
          - en/
          - zh/
+         - ko/
 
    </FileTree>
 
@@ -143,7 +149,7 @@ If a translation is not yet available for a language, Starlight will show reader
 
 In addition to hosting translated content files, Starlight allows you to translate the default UI strings (e.g. the "On this page" heading in the table of contents) so that your readers can experience your site entirely in the selected language.
 
-English, Czech, French, German, Italian, Japanese, Portuguese, Dutch, Danish, Spanish, Turkish, Arabic, Norwegian, Farsi, and Simplified Chinese translated UI strings are provided out of the box, and we welcome [contributions to add more default languages](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
+English, Czech, French, German, Italian, Japanese, Portuguese, Dutch, Danish, Spanish, Turkish, Arabic, Norwegian, Farsi, Simplified Chinese and Korean translated UI strings are provided out of the box, and we welcome [contributions to add more default languages](https://github.com/withastro/starlight/blob/main/CONTRIBUTING.md).
 
 You can provide translations for additional languages you support — or override our default labels — via the `i18n` data collection.
 
