fcff49ee4260ad68e80833712e161cbb978a2562

--- a/docs/src/content/docs/ja/guides/customization.mdx
+++ b/docs/src/content/docs/ja/guides/customization.mdx
@@ -173,7 +173,7 @@ defineConfig({
 
 Starlightは、Starlightインテグレーションの[`social`](/ja/reference/configuration/#social)オプションを使用して、サイトヘッダーにソーシャルメディアアカウントへのリンクを追加する機能を備えています。
 
-現在、Bitbucket、Codeberg、CodePen、Discord、GitHub、GitLab、Gitter、LinkedIn、Mastodon、Microsoft Teams、Threads、Twitch、Twitter、YouTubeへのリンクがサポートされています。他のサービスのサポートが必要な場合は、GitHubまたはDiscordでお知らせください！
+現在、Bitbucket、Codeberg、CodePen、Discord、GitHub、GitLab、Gitter、Instagram、LinkedIn、Mastodon、Microsoft Teams、Threads、Twitch、Twitter、YouTubeへのリンクがサポートされています。他のサービスのサポートが必要な場合は、GitHubまたはDiscordでお知らせください！
 
 ```js
 // astro.config.mjs
