--- a/docs/src/content/docs/pt-br/404.md
+++ b/docs/src/content/docs/pt-br/404.md
@@ -8,6 +8,6 @@ hero:
   actions:
     - text: Ir para o início
       icon: right-arrow
-      link: /
+      link: /pt-br/
       variant: primary
 ---
