--- a/docs/src/content/docs/es/showcase.mdx
+++ b/docs/src/content/docs/es/showcase.mdx
@@ -96,21 +96,21 @@ Estas herramientas de la comunidad, plugins e integraciones funcionan junto a St
 	<LinkCard
 		href="https://www.feelback.dev/blog/new-astro-starlight-integration/"
 		title="FeelBack"
-		description="Add a user feedback system to your docs pages."
+		description="Agrega un sistema de opinión de usuarios a tus páginas de documentación."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-blog"
 		title="starlight-blog"
-		description="Add a blog to your documentation site."
+		description="Agrega un blog a tu sitio de documentación."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-links-validator"
 		title="starlight-links-validator"
-		description="Check for broken links in your Starlight pages."
+		description="Verifica en tus páginas de Starlight si hay enlaces rotos."
 	/>
 	<LinkCard
 		href="https://github.com/HiDeoo/starlight-typedoc"
 		title="starlight-typedoc"
-		description="Generate Starlight pages from TypeScript using TypeDoc."
+		description="Genera páginas de Starlight a partir de TypeScript usando TypeDoc."
 	/>
 </CardGrid>
