i18n(zh-cn): Update getting-started.mdx

--- a/docs/src/content/docs/zh/getting-started.mdx
+++ b/docs/src/content/docs/zh/getting-started.mdx
@@ -126,4 +126,4 @@ yarn upgrade @astrojs/starlight --latest
 
 如果你在这些文档中找不到答案，请访问[完整的 Astro 文档](https://docs.astro.build) 以获取完整的 Astro 文档。你的问题可能是通过了解 Starlight 主题下 Astro 的工作原理来解决的。
 
-你也可以在 [Astro Discord](https://astro.build/chat/)上从我们活跃的、友好的社区中获得帮助！你可以在我们的 `#support` 论坛中发布问题，或者访问我们专门的 `#starlight` 频道来讨论当前的开发和更多！
+你也可以检查任何已知的 [GitHub 上的 Starlight issues](https://github.com/withastro/starlight/issues)，并在 [Astro Discord](https://astro.build/chat/) 上从我们活跃的、友好的社区中获得帮助！在我们的 `#support` 论坛中发布带有 “starlight” 标签的问题，或者访问我们专门的 `#starlight` 频道来讨论当前的开发和更多内容！
